# lantern

./: .gitignore  CHANGELOG.md  LICENSE  README.md  client.py  config.py  discovery.py  peer.py  protocol.py  pyproject.toml  requirements.txt  server.py  tui.py
.github/workflows/: publish.yml
lantern/: __init__.py  client.py  config.py  discovery.py  main.py  peer.py  protocol.py  server.py  tui.py  updater.py
lantern/styles/: lantern.css
tests/: test_client.py  test_protocol.py
