[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lantern-p2p"
version = "1.0.3"
description = "Lantern - A P2P file sharing system with TUI dashboard"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["p2p", "file-sharing", "lan", "transfer", "tui"]
authors = [
    { name = "shx-dow", email = "83426772+shx-dow@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: File Sharing",
    "Topic :: Internet :: File Transfer Protocol (FTP)",
    "Topic :: System :: Networking",
]
dependencies = [
    "textual>=0.50.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
]

[project.scripts]
lantern = "lantern.main:main"

[project.urls]
Homepage = "https://github.com/shx-dow/lantern"
Documentation = "https://github.com/shx-dow/lantern#readme"
Repository = "https://github.com/shx-dow/lantern"
Issues = "https://github.com/shx-dow/lantern/issues"

[tool.hatch.build.targets.wheel]
packages = ["lantern"]

[tool.hatch.build.targets.wheel.shared-files]
"lantern/styles" = "lantern/styles"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "W"]
ignore = ["E501"]
